res/css/views/auth/_AuthBody.scss
/*
Copyright 2019 New Vector Ltd
Copyright 2020 The Matrix.org Foundation C.I.C.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

.mx_AuthBody {
    width: 500px;
    font-size: $font-12px;
    color: $authpage-secondary-color;
    background-color: $background;
    border-radius: 0 4px 4px 0;
    padding: 25px 60px;
    box-sizing: border-box;

    &.mx_AuthBody_flex {
        display: flex;
        flex-direction: column;
    }

    h2 {
        font-size: $font-24px;
        font-weight: 600;
        margin-top: 8px;
        color: $authpage-primary-color;
    }

    h3 {
        font-size: $font-14px;
        font-weight: 600;
        color: $authpage-secondary-color;
    }

    h3.mx_AuthBody_centered {
        text-align: center;
    }

    a:link,
    a:hover,
    a:visited {
        @mixin mx_Dialog_link;
    }

    input[type=text],
    input[type=password] {
        color: $authpage-primary-color;
    }

    .mx_Field input,
    .mx_Field select {
        color: $authpage-primary-color;
        background-color: $background;
    }

    .mx_Field_labelAlwaysTopLeft label,
    .mx_Field select + label /* Always show a select's label on top to not collide with the value */,
    .mx_Field input:focus + label,
    .mx_Field input:not(:placeholder-shown) + label,
    .mx_Field textarea:focus + label,
    .mx_Field textarea:not(:placeholder-shown) + label {
        background-color: $background;
    }

    input.error {
        color: $alert;
    }

    .mx_Field input {
        box-sizing: border-box;
    }

    .mx_Field_select::before {
        background-color: $authpage-primary-color;
    }

    .mx_Dropdown {
        color: $authpage-primary-color;
    }

    .mx_Dropdown_arrow {
        background: $authpage-primary-color;
    }

    .mx_Dropdown_menu {
        background-color: $background;

        .mx_Dropdown_option_highlight {
            background-color: $authpage-focus-bg-color;
        }
    }
}

.mx_AuthBody_fieldRow {
    display: flex;
    margin-bottom: 10px;
}

.mx_AuthBody_fieldRow > .mx_Field {
    margin: 0 5px;
}

.mx_AuthBody_fieldRow > .mx_Field:first-child {
    margin-left: 0;
}

.mx_AuthBody_fieldRow > .mx_Field:last-child {
    margin-right: 0;
}

.mx_AuthBody_paddedFooter {
    height: 80px; // height of the submit button + register link
    padding-top: 28px;
    text-align: center;

    .mx_AuthBody_paddedFooter_title {
        margin-top: 16px;
        font-size: $font-15px;
        line-height: $font-24px;

        .mx_InlineSpinner img {
            vertical-align: sub;
            margin-right: 5px;
        }
    }

    .mx_AuthBody_paddedFooter_subtitle {
        margin-top: 8px;
        font-size: $font-10px;
        line-height: $font-14px;
    }
}

.mx_AuthBody_changeFlow {
    display: block;
    text-align: center;
    width: 100%;

    > a {
        font-weight: $font-semi-bold;
    }
}

.mx_SSOButtons + .mx_AuthBody_changeFlow {
    margin-top: 24px;
}

.mx_AuthBody_spinner {
    margin: 1em 0;
}

@media only screen and (max-width: 480px) {
    .mx_AuthBody {
        border-radius: 4px;
        width: auto;
        max-width: 500px;
        padding: 10px;
    }
}

